Added mindmap images to this post.

--- a/docs/_posts/2018-01-29-concepts.md
+++ b/docs/_posts/2018-01-29-concepts.md
@@ -6,7 +6,13 @@ subtitle: "An example Page"
 order: 4
 ---
 
-Below are a few of our better conceptual ideas.
+Here is 2 mindmaps on concepts that we could complete for our final project. The first is ideas to do with 'wearables' while the second is in relation to the concept of 'traces'
+
+![Wearables Mindmap]({{site.imageurl}}/mindmap_wearables_concepts.jpg)
+
+![Traces Mindmap]({{site.imageurl}}/mindmap_traces_concept.jpg)
+
+Below are a few of our better conceptual ideas explained further.
 We like 1 (Creativity tracker), 3 (Dancing/Movement tracker) and 5 (LED wearable game) best
 
 We also love the idea of using a snap bracelet as the housing for the project as it is playful, fun and easy to use.
