--- a/docs/_posts/2018-01-23-people.md
+++ b/docs/_posts/2018-01-23-people.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-categories: research
+categories: hidden
 title: "People of Inspiration"
 subtitle: "An example Page"
 order: 1
